<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uWant</string>
    <string name="app_id">320558844735488</string>

    <string name="register">Registration</string>
    <string name="text_recovery_password">Recovery password</string>
    <string name="text_fill_your_registered_mail">Enter your email</string>
    <string name="text_must_fill_registered_mail">You need to enter the email of your registration.</string>
    <string name="text_attention">Heads up</string>
    <string name="text_was_sended_mail_recovery_password">An email was sent to you to reset your password.</string>
    <string name="text_field_all_fields_correctly">Enter all fields correctly.</string>
    <string name="text_ok">Ok</string>
    <string name="text_register_congratulations">Congratulations, your registration was successful.<br/>Please perform a login to access the uWant!</string>
    <string name="text_cancel">Cencel</string>
    <string name="text_ask_before_cancel_registration">Do you really want to cancel the registration process in uWant?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_enter">Sign-in</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_your_password">Forgot your password?</string>
    <string name="text_enter_with_facebook">Sign-in with Facebook</string>
    <string name="text_name_plus_last_name">Name + Last Name</string>
    <string name="text_female">Female</string>
    <string name="text_male">Male</string>
    <string name="text_email">Email</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_facebook_error">A problem with Facebook occurred. Please try again later!</string>
    <string name="contacts">Contacts</string>
    <string name="text_skip">Skip</string>
    <string name="text_contacts_invitation">Please select the people you want to invite or skip this step.</string>
    <string name="text_welcome">Welcome!</string>
    <string name="perfil">Perfil</string>
    <string name="text_search">Filtrar</string>
    <string name="text_wish_list_empty_title">Criar nova categoria</string>
    <string name="text_wish_list_empty_default_title">Desejos de aniversário</string>
    <string name="text_perfil_friends_circle_add_contacts">As solicitações foram enviadas com sucesso!</string>
    <string name="text_contacts_from_perfil_invitation">Please select the people you want to invite or go back.</string>
    <string name="text_hint_perfil_search">What would you like to see?</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="text_oh_no">Oh no!</string>
    <string name="about">About</string>
    <string name="text_exit_message">Do you really want to logoff?</string>
    <string name="text_feeds_just_now">Just now</string>
    <string name="text_configurations_account_title">Block account</string>
    <string name="text_configurations_account_summary">You can block your account anytime you want.</string>
    <string name="text_wait">Wait...</string>
    <string name="configurations">Configurations</string>
    <string name="text_exclude_account">Your account has been blocked right now.</string>
    <string name="text_report">Report</string>
    <string name="text_no_activities">Block feed</string>
    <string name="text_exclude_friend">Remove friend</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_share">Share</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_add_wishes">Add wishes</string>
    <string name="text_wishlist_created">The wish list has been create successfully.</string>
    <string name="text_ancient_easter_eager">An ancient was detected, congratulations master Yoda!</string>
    <string name="text_exclude_account_success">Your account has been blocked right now.</string>
    <string name="text_configurations_facebook_title">Add/Remove Facebook</string>
    <string name="text_configurations_facebook_summary">You can add or remove your Facebook account from uWant anitime you want.</string>
    <string name="text_see_perfil">Open perfil</string>
    <string name="text_add_friend">Add friend</string>
    <string name="text_invite_all_friends">Convidar todos os amigos abaixo</string>
    <string name="text_contacts_introduction">Você já está cadastrado, agora convide seus amigos para compartilhar desejos!</string>
    <string name="text_report_activity">A atividade foi reportada com sucesso.</string>
    <string name="text_sending_picture">Enviando foto...</string>
    <string name="text_sending_pictures">Enviando fotos...</string>
    <string name="text_feed_empty">Você ainda não tem notificações, pressione a imagem e adicione amigos!</string>
    <string name="text_empty_friends">Você ainda não tem amigos no seu círculo, pressione a imagem e adicione-os do seus contatos!</string>
    <string name="text_link_facebook">Sua conta foi vinculada com sucesso.</string>
    <string name="text_unlink_facebook">Sua conta foi desvinculada com sucesso.</string>
    <string name="text_hint_comment">Digite seu comentário</string>
    <string name="text_facebook_link">Você ainda não vinculou nenhuma conta do Facebook. Deseja realizar isto agora?</string>
    <string name="text_hint_link">Digite seu link...</string>
    <string name="text_update_user">O seu registro foi atualizado com sucesso! Se você modificou o seu e-mail, recomendamos você confirma-lo imediatamente.</string>
    <string name="text_first_comment">Faça o primeiro comentário</string>
    <string name="text_alert_comment_empty">Digite o texto a ser enviado...</string>
    <string name="text_comment_top">Exibir comentários anteriores</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_sharing">Compartilhando...</string>
    <string name="text_wishes">Desejos</string>
    <string name="text_alter_data">Alterar dados</string>
    <string name="text_update">Atualizar</string>
    <string name="text_find_friends">Encontrar Amigos</string>
    <string name="text_fill_three_characteres">Você precisa digitar, no mínimo, 3 caracteres.</string>
    <string name="text_image_capture_warning">Não estamos conseguindo abrir a camera do seu aparelho. Por favor, tente importar a foto da galeria!</string>
    <string name="text_capture_picture_warning">Não estamos conseguindo abrir a galeria do seu aparelho. Por favor, tente tirar a foto pela camera!</string>
    <string name="text_cancel_product">As fotos não serão carregadas na lista de desejos. Você deseja realmente continuar?</string>
    <string name="text_hint_description">Digite a descrição aqui</string>
    <string name="text_choose_images">Escolha as imagens</string>
    <string name="text_no_contacts">Você não possui nenhum contato disponível nesta modalidade.</string>
    <string name="text_loading">Carregando...</string>
    <string name="text_hint_find_user">Digite o nome, e-mail ou login do usuário</string>
    <string name="text_informations">Informações</string>
    <string name="text_app_version">Versão do Aplicativo</string>
    <string name="text_support">Suporte</string>
    <string name="text_site">Site</string>
    <string name="text_account">Conta</string>
    <string name="text_exit">Sair</string>
    <string name="text_about">Sobre</string>
    <string name="text_want_remove">Você deseja realmente remover?</string>
    <string name="text_want_remove_2">Como esta é sua única imagem, você estará cancelando o compartilhamento.</string>
    <string name="text_camera">Câmera</string>

</resources>
