<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/GRAY_BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:id="@+id/register_imageView_picture"
                android:src="@drawable/ic_semfoto"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="76dp"
                android:layout_height="76dp"
                android:src="@drawable/ic_comfoto"
                android:visibility="invisible"
                android:id="@+id/register_imageView_pictureDetail"
                android:layout_gravity="center_horizontal" />

        </FrameLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            style="@style/UWEditText"
            android:hint="@string/text_email"
            android:imeOptions="actionNext"
            android:layout_margin="2.5dp"
            android:id="@+id/register_editText_mail"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/UWEditText"
            android:inputType="textWebEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/text_login"
            android:layout_margin="2.5dp"
            android:imeOptions="actionNext"
            android:id="@+id/register_editText_login" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/text_password"
            android:imeOptions="actionDone"
            style="@style/UWEditText"
            android:layout_margin="2.5dp"
            android:id="@+id/register_editText_password"
            android:layout_gravity="center_horizontal" />

        <RadioGroup
            android:id="@+id/register_radioGroup_gender"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_female"
                android:textColor="@color/GRAY_TEXT"
                android:id="@+id/register_radioButton_female" />

            <RadioButton
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_male"
                android:id="@+id/register_radioButton_male"
                android:textColor="@color/GRAY_TEXT"
                android:layout_gravity="center_horizontal" />

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            style="@style/UWEditText"
            android:layout_margin="2.5dp"
            android:hint="@string/text_name_plus_last_name"
            android:ems="10"
            android:id="@+id/register_editText_name"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            style="@style/UWEditText"
            android:maxLength="10"
            android:lines="1"
            android:maxLines="1"
            android:hint="@string/text_birthday"
            android:layout_margin="2.5dp"
            android:id="@+id/register_editText_birthday"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            style="@style/ButtonuWant"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/register_button_register"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>